--- a/conta-bancaria/index.html
+++ b/conta-bancaria/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste OOSJ</title>
     <style>
-        h1{
+        h2{
             color: blue ;
         }
 
@@ -14,6 +14,7 @@
 </head>
 <body>
     <h1  style="color: #ffa500" >Hello World</h1>
+    <h2>Hello Life</h2>
 
     <script src="index.js"></script>
 </body>
